Change some errors.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                      *********************************************************************** -->
                   <a href="index.html">Home</a> &nbsp;&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
                   <a href="about.html">About</a> &nbsp;&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
-                  <a href="contact_us.html">Contact Us</a> &nbsp;&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="contact.html">Contact Us</a> &nbsp;&nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
                   <a href="https://web.facebook.com/ramloganbayancabuso.2004" target="_blank">Facebook</a> &nbsp;&nbsp;&nbsp;&nbsp;
                </font>
             </td>
