Adding HR in line 48

--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
                                     <li>+1 8955 88554 67</li>
                                     <li>+1 5859 58548 89</li>
                                 </ul>
+				    <hr color="black" size="2">
                                 <h3>Email Addresses:</h3>
                                 <ul>
                                     <li>cabusrammy@gmail.com</li>
